--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -3,13 +3,13 @@
 <head>
     <style>
         body {
-            background-image: url('search-engine.jpeg');
+            background-image: url('../static/search-engine.jpeg');
             background-repeat: no-repeat;
         }
     </style>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link href="http://obj-cache.cloud.ruanbekker.com/favicon.ico" rel="icon">
+    <link href="../static/internet.png" rel="icon" type="image/png">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Query Search from MSMARCO dataset</title>
 </head>
@@ -18,16 +18,14 @@
     <div class="jumbotron" style="background:transparent !important">
         <div style="font-family: 'Book Antiqua', cursive;">
             <p>
-            <div style="text-align: center;">
-                <span>Search for documents based on query</span>
-            </div>
+            <center>
+                <font size="8">Search for documents based on query</font>
+            </center>
         </div>
     </div>
     <form action="/search/results" method="post">
         <div class="input-group">
-            <label>
-                <input autofocus class="form-control input-lg" name="input" placeholder="Search" type="text">
-            </label>
+            <input autofocus class="form-control input-lg" name="input" placeholder="Search" type="text">
             <div class="input-group-btn">
                 <button class="btn btn-primary btn-lg" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
@@ -68,7 +66,7 @@
         {% endfor %}
     </table>
     <footer class="footer">
-        <p>&copy; 2021:Omer,Sai,Sudipta</p>
+        <p>&copy; 2021:Omer,Karthik,Sudipta</p>
     </footer>
 </div>
 </body>
