--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <style>
         body {
-            background-image: url('search-engine.jpeg');
+            background-image: url('../static/search-engine.jpeg');
             background-repeat: no-repeat;
         }
     </style>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link href="http://obj-cache.cloud.ruanbekker.com/favicon.ico" rel="icon">
+    <link href="../static/internet.png" rel="icon" type="image/png">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Query Search from MSMARCO dataset</title>
 </head>
-
 <body>
 <div class="container">
-    <div style="background-image: url('search-engine.jpeg');">
+    <div>
         <div style="font-family: 'Book Antiqua', cursive;">
             <p>
-            <div style="text-align: center;">
-                <span>Search for documents based on query</span>
-            </div>
+            <center>
+                <font size="8">Search for documents based on query</font>
+            </center>
         </div>
     </div>
     <form action="/search/results" method="post">
         <div class="input-group">
-            <label>
-                <input autofocus class="form-control input-lg" name="input" placeholder="Search" type="text">
-            </label>
+            <input autofocus class="form-control input-lg" name="input" placeholder="Search" type="text">
             <div class="input-group-btn">
                 <button class="btn btn-primary btn-lg" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
