GH-15 - Partial search fron end part and retain text

--- a/web/templates/suggestions.html
+++ b/web/templates/suggestions.html
@@ -1,5 +1,6 @@
-<label id="suggestion_label">
+<datalist id="wizards-list">
     {% for suggestion in suggestions['hits']['hits'] %}
-    {{ suggestion['fields']['title'][0] }}<br>
+        <option>{{ suggestion['fields']['title'][0]}}</option>
     {% endfor %}
-</label>
+</datalist>
+
