--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -1,76 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        body {
-            text-align: center;
-        }
-
-        .center-p {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 300px;
-            margin-bottom: 10px;
-        }
-
-        .center_btn_cls {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .center-button {
-            justify-content: center;
-            align-items: center;
-            background-color: rgb(166, 166, 166);
-            border: none;
-            color: black;
-            padding: 10px;
-            text-align: center;
-            text-decoration: none;
-            display: flex;
-            font-family: Cambria;
-            font-size: 16px;
-            margin-right: 5px;
-            cursor: pointer;
-            border-radius: 12px;
-            width: 250px;
-        }
-
-        .search-box {
-            display: flex;
-            text-align: center;
-            margin: 0 auto;
-            margin-left: auto;
-            margin-bottom: 20px;
-            padding: 20px;
-            border-radius: 12px;
-            height: 10px;
-            outline: none;
-            border: 2px solid #999999;
-            font-size: 20px;
-            font-family: Cambria;
-            background-image: url('http://www.kirupa.com/images/search.png');
-            background-repeat: no-repeat;
-        }
-
-        table {
-            table-layout: fixed;
-            max-width: 500px;
-        }
-
-        table.center {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        td {
-            text-align: left;
-            font-family: Cambria;
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/results.css">
     <title>Query Search from MSMARCO dataset</title>
 </head>
 <body>
@@ -81,12 +12,20 @@
         </div>
     </div>
     <form action="/search/results" method="post">
-        <input type="text" class="form-control search-box" name="input" placeholder="Search" autofocus size=150>
+
+        <input autofocus class="form-control search-box" id="input" name="input" value="{{search_term}}" placeholder="Search" size=150 type="text" autocomplete="on"
+               list="wizards-list">
+        <!-- Taking input and providing suggestions -->
+        <div id="suggestions"></div>
         <div class="center_btn_cls">
-            <button class="center-button" type="submit" formaction="/search/results?q=bm25">BM25</button>
-            <button class="center-button" type="submit" formaction="/search/results?q=vsm">VSM</button>
+            <button class="center-button" formaction="/search/results?q=bm25" type="submit">BM25</button>
+            <button class="center-button" formaction="/search/results?q=vsm" type="submit">VSM</button>
         </div>
+
     </form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../static/script.js"></script>
+
     <table id="BM25" class="center">
         {% for hit in bm25['hits']['hits'] %}
             <tbody>
