--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -1,63 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        .center {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 300px;
-            margin-bottom: 10px;
-        }
-
-
-        .center_btn_cls {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .center-button {
-            justify-content: center;
-            align-items: center;
-            background-color: rgb(166, 166, 166);
-            border: none;
-            color: black;
-            padding: 10px;
-            text-align: center;
-            text-decoration: none;
-            display: flex;
-            font-family: Cambria;
-            font-size: 16px;
-            margin-right: 5px;
-            cursor: pointer;
-            border-radius: 12px;
-            width: 250px;
-        }
-
-        .search-box {
-            display: flex;
-            text-align: center;
-            margin: 0 auto;
-            margin-left: auto;
-            margin-bottom: 20px;
-            padding: 20px;
-            border-radius: 12px;
-            height: 10px;
-            outline: none;
-            border: 2px solid #999999;
-            font-size: 20px;
-            font-family: Cambria;
-            background-image: url('http://www.kirupa.com/images/search.png');
-            background-repeat: no-repeat;
-        }
-
-        .td-style {
-            font-family: 'Cambria';
-            text-align: center;
-        }
-    </style>
-
+    <link rel="stylesheet" href="../static/search.css">
     <title>Query Search from MSMARCO dataset</title>
 </head>
 <body>
@@ -68,7 +12,9 @@
         </div>
     </div>
     <form action="/search/results" method="post">
-        <input autofocus class="form-control search-box" name="input" placeholder="Search" size=150 type="text">
+
+        <input autofocus class="form-control search-box" id="input" name="input" value="{{search_term}}" placeholder="Search" size=150 type="text" autocomplete="on"
+               list="wizards-list">
         <!-- Taking input and providing suggestions -->
         <div id="suggestions"></div>
         <div class="center_btn_cls">
@@ -77,23 +23,8 @@
         </div>
 
     </form>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-            $("#input").keyup(function () {
-                let text = $(this).val();
-                $.ajax({
-                    url: "/suggestions",
-                    type: "get",
-                    data: {search_query: text},
-                    success: function (response) {
-                        $("#suggestions").html(response);
-                    },
-                    error: function (xhr, exception) {
-                        $('#post').html(xhr.status + ' ' + exception.message);
-                    }
-                });
-            });
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../static/script.js"></script>
 
     <br><br>
     <footer class="footer">
