--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -13,7 +13,7 @@
     </div>
     <form action="/search/results" method="post">
 
-        <input autofocus class="form-control search-box" id="input" name="input" value="{{search_term}}" placeholder="Search" size=150 type="text" autocomplete="on"
+        <input autofocus class="form-control search-box" id="input" name="input" value="{{search_term}}" placeholder="Search by location" size=150 type="text" autocomplete="on"
                list="wizards-list">
         <!-- Taking input and providing suggestions -->
         <div id="suggestions"></div>
